--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -1,9 +1,10 @@
 .card {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     margin-top: 20px;
     margin-bottom: 20px;
+    width: 98%;
 }
 
 .card__picture {
@@ -15,11 +16,11 @@
 .card__img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .card__wrap {
-
+    flex: 1;
 }
 
 .card__box {
@@ -50,6 +51,6 @@
     }
 
     .card__picture {
-        margin: 0 0 20px 0;
+        margin: 0 auto 20px auto;
     }
 }
