--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 html {
-  font-size: 16px;
-  box-sizing: border-box;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+html, body, #root {
+    height: 100%;
 }
